Fixed snow not aligning correctly

--- a/sass/partials/specials/_snowspecial.scss
+++ b/sass/partials/specials/_snowspecial.scss
@@ -22,7 +22,7 @@
         background-position:0 0,300px 200px,200px 200px
     }
     100% {
-        background-position:500px 2000px,1300px 1200px,700px 700px
+        background-position:500px 2000px,1350px 1250px,890px 890px
     }
 }
 @-moz-keyframes snow {
@@ -30,7 +30,7 @@
         background-position:0 0,300px 200px,200px 200px
     }
     100% {
-        background-position:500px 2000px,1300px 1200px,700px 700px
+        background-position:500px 2000px,1350px 1250px,890px 890px
     }
 }
 @-ms-keyframes snow {
@@ -38,7 +38,7 @@
         background-position:0 0,300px 200px,200px 200px
     }
     100% {
-        background-position:500px 2000px,1300px 1200px,700px 700px
+        background-position:500px 2000px,1350px 1250px,890px 890px
     }
 }
 @keyframes snow {
@@ -46,6 +46,6 @@
         background-position:0 0,300px 200px,200px 200px
     }
     100% {
-        background-position:500px 2000px,1300px 1200px,700px 700px
+        background-position:500px 2000px,1350px 1250px,890px 890px
     }
 }
